--- a/views/article.ejs
+++ b/views/article.ejs
@@ -1,11 +1,12 @@
 <%- include header %>
-<% if (user && (user.name == post.name)) { %>
-<span><a class="edit" href="/edit/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">编辑</a></span>
-<span><a class="edit" href="/remove/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">删除</a></span>
+<% if (user && (user.name == article.name)) { %>
+<span><a class="edit" href="/edit/<%= article.name %>/<%= article.time.day %>/<%= article.title %>">编辑</a></span>
+<span><a class="edit" href="/remove/<%= article.name %>/<%= article.time.day %>/<%= article.title %>">删除</a></span>
 <% } %>
 <p class="info">
-    作者：<a href="/u/<%= post.name %>"><%= post.name %></a> |
-    日期：<%= post.time.minute %>
+    作者：<a href="/u/<%= article.name %>"><%= article.name %></a> |
+    日期：<%= article.time.minute %>
 </p>
-<p><%- post.post %></p>
+<p><%- article.content %></p>
+<%- include comment %>
 <%- include footer %>
