--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,9 +1,9 @@
 <%- include header %>
 <form method="post">
     标题：<br/>
-    <input type="text" name="title" value="<%= post.title %>" disabled="disabled"/><br/>
+    <input type="text" name="title" value="<%= article.title %>" disabled="disabled"/><br/>
     正文：<br/>
-    <textarea name="post" rows="20" cols="100"><%= post.post %></textarea><br/>
+    <textarea name="content" rows="20" cols="100"><%= article.content %></textarea><br/>
     <input type="submit" value="保存修改"/>
 </form>
 <%- include footer %>
