--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <%- include header %>
-<% posts.forEach(function (post, index) { %>
-<p><h2><a href="u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></h2></p>
+<% articles.forEach(function (article, index) { %>
+<p><h2><a href="u/<%= article.name %>/<%= article.time.day %>/<%= article.title %>"><%= article.title %></a></h2></p>
 <p class="info">
-    作者：<a href="u/<%= post.name %>"><%= post.name %></a> |
-    日期：<%= post.time.minute %>
+    作者：<a href="u/<%= article.name %>"><%= article.name %></a> |
+    日期：<%= article.time.minute %>
 </p>
-<p><%- post.post %></p>
+<p><%- article.content %></p>
 <% }) %>
 <%- include footer %>
