--- a/views/article.ejs
+++ b/views/article.ejs
@@ -5,7 +5,13 @@
 <% } %>
 <p class="info">
     作者：<a href="/u/<%= article.name %>"><%= article.name %></a> |
-    日期：<%= article.time.minute %>
+    日期：<%= article.time.minute %>|
+    标签：
+    <% article.tags.forEach(function (tag, index) { %>
+    <% if (tag) { %>
+    <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
+    <% } %>
+    <% }) %>
 </p>
 <p><%- article.content %></p>
 <%- include comment %>
