--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,15 @@
 <p><h2><a href="u/<%= article.name %>/<%= article.time.day %>/<%= article.title %>"><%= article.title %></a></h2></p>
 <p class="info">
     作者：<a href="u/<%= article.name %>"><%= article.name %></a> |
-    日期：<%= article.time.minute %>
+    日期：<%= article.time.minute %>|
+    标签：
+    <% if(article.tags){ %>
+    <% article.tags.forEach(function (tag, index) { %>
+    <% if (tag) { %>
+    <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
+    <% } %>
+    <% }) %>
+    <% } %>
 </p>
 <p><%- article.content %></p>
 <% }) %>
