--- a/views/article.ejs
+++ b/views/article.ejs
@@ -7,11 +7,13 @@
     作者：<a href="/u/<%= article.name %>"><%= article.name %></a> |
     日期：<%= article.time.minute %>|
     标签：
+    <% if (article.tags){ %>
     <% article.tags.forEach(function (tag, index) { %>
     <% if (tag) { %>
     <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
     <% } %>
     <% }) %>
+    <% } %>
 </p>
 <p><%- article.content %></p>
 <%- include comment %>
