--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,15 @@
 </article>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+    (function () {
+        var element = document.getElementById(window.location.pathname);
+        if (element) {
+            element.className = "active";
+        }
+    })();
+</script>
 </body>
 </html>
