--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,30 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Blog</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <title>我的博客</title>
+
+    <!-- Bootstrap -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/stylesheets/style.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
+<div class="container">
+    <!-- Static navbar -->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
-<header>
-    <h1><%= title %></h1>
-</header>
-
-<nav>
-    <span><a title="主页" href="/">home</a></span>
-    <span><a title="存档" href="/archive">archive</a></span>
-    <span><a title="标签" href="/tags">tags</a></span>
-    <% if (user) { %>
-    <span><a title="上传" href="/upload">upload</a></span>
-    <span><a title="发表" href="/post">post</a></span>
-    <span><a title="登出" href="/logout">logout</a></span>
-    <% } else { %>
-    <span><a title="登录" href="/login">login</a></span>
-    <span><a title="注册" href="/reg">register</a></span>
-    <% } %>
-</nav>
-
+                <a class="navbar-brand" href="#">
+                    <%= title %>
+                </a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li id="/"><a href="/">主页</a></li>
+                    <li id="/archive"><a href="/archive">存档</a></li>
+                    <li id="/tags"><a href="/tags">标签</a></li>
+                    <% if (user) { %>
+                    <li id="/upload"><a href="/upload">上传</a></li>
+                    <li id="/post"><a href="/post">发表</a></li>
+                    <li id="/logout"><a href="/logout">登出</a></li>
+                    <% } else { %>
+                    <li id="/login"><a href="/login">登录</a></li>
+                    <li id="/reg"><a href="/reg">注册</a></li>
+                    <% } %>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
 <article>
     <% if (success) { %>
     <div><%= success %></div>
