--- a/views/header.ejs
+++ b/views/header.ejs
@@ -53,11 +53,12 @@
             </div>
         </div>
     </nav>
-</div>
-<article>
-    <% if (success) { %>
-    <div><%= success %></div>
-    <% } %>
-    <% if (error) { %>
-    <div><%= error %> </div>
-<% } %>
+    <div class="jumbotron">
+
+        <article>
+            <% if (success) { %>
+            <div><%= success %></div>
+            <% } %>
+            <% if (error) { %>
+            <div><%= error %> </div>
+            <% } %>
