--- a/views/article.ejs
+++ b/views/article.ejs
@@ -1,8 +1,7 @@
 <%- include header %>
-<% if (user && (user.name == article.name)) { %>
-<span><a class="edit" href="/edit/<%= article.name %>/<%= article.time.day %>/<%= article.title %>">编辑</a></span>
-<span><a class="edit" href="/remove/<%= article.name %>/<%= article.time.day %>/<%= article.title %>">删除</a></span>
-<% } %>
+<div class="page-header">
+    <h2><%= title %></h2>
+</div>
 <p class="info">
     作者：<a href="/u/<%= article.name %>"><%= article.name %></a> |
     日期：<%= article.time.minute %>|
@@ -10,11 +9,21 @@
     <% if (article.tags){ %>
     <% article.tags.forEach(function (tag, index) { %>
     <% if (tag) { %>
-    <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
+    <a class="label label-primary" href="/tags/<%= tag %>"><%= tag %></a>
     <% } %>
     <% }) %>
     <% } %>
 </p>
-<p><%- article.content %></p>
+<div class="content">
+    <p><%- article.content %></p>
+</div>
+<% if (user && (user.name == article.name)) { %>
+<a class="btn btn-default" href="/edit/<%= article.name %>/<%= article.time.day %>/<%= article.title %>" role="button">编辑</a>
+<a class="btn btn-default" href="/remove/<%= article.name %>/<%= article.time.day %>/<%= article.title %>"
+   role="button">删除</a>
+<% } %>
+<p class="info">
+    阅读：<%= article.pv %> | 评论：<%= article.comments.length %>
+</p>
 <%- include comment %>
 <%- include footer %>
