--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,11 +1,18 @@
 <%- include header %>
 <form method="post">
-    标题：<br/>
-    <input type="text" name="title"/><br/>
-    标签：<br/>
-    <input type="text" name="tag1"/><input type="text" name="tag2"/><input type="text" name="tag3"/><br/>
-    正文：<br/>
-    <textarea name="content" rows="20" cols="100"></textarea><br/>
-    <input type="submit" value="发表"/>
+    <div class="form-group">
+        标题：<br/>
+        <input type="text" name="title"/>
+    </div>
+    <div class="form-group">
+        标签：<br/>
+        <input type="text" name="tag1"/><input type="text" name="tag2"/><input type="text" name="tag3"/>
+    </div>
+    <div class="form-group">
+        正文：<br/>
+        <textarea name="content" rows="20" cols="100"></textarea>
+    </div>
+    <button type="submit" class="btn btn-default">发表</button>
+
 </form>
 <%- include footer %>
