--- a/views/tags.ejs
+++ b/views/tags.ejs
@@ -1,5 +1,5 @@
 <%- include header %>
 <% tags.forEach(function (tag, index) { %>
-<h1><a class="tag" href="/tags/<%= tag %>"><%= tag %></a></h1>
+<a class="label label-primary" href="/tags/<%= tag %>"><%= tag %></a>
 <% }) %>
 <%- include footer %>
