--- a/views/user.ejs
+++ b/views/user.ejs
@@ -14,6 +14,7 @@
     <% } %>
 </p>
 <p><%- article.content %></p>
+<p class="info">阅读：<%= article.pv %> | 评论：<%= article.comments.length %></p>
 <% }) %>
 <%- include page %>
 <%- include footer %>
