--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,10 @@
 <ul class="list-group">
     <% articles.forEach(function (article, index) { %>
     <li>
-        <h3><a href="u/<%= article.name %>/<%= article.time.day %>/<%= article.title %>"><%= article.title %></a></h3>
+        <h3><a class="modal-title"
+               href="u/<%= article.name %>/<%= article.time.day %>/<%= article.title %>"><%= article.title %></a></h3>
 
-        <p class="info">
+        <div class="info">
             作者：<a href="u/<%= article.name %>"><%= article.name %></a> |
             日期：<%= article.time.minute %>|
             标签：
@@ -15,15 +16,14 @@
             <% } %>
             <% }) %>
             <% } %>
-        </p>
+        </div>
 
         <div class="content">
             <p><%- article.content %></p>
         </div>
-
-        <p class="info">
+        <div class="info">
             阅读：<%= article.pv %> | 评论：<%= article.comments.length %>
-        </p>
+        </div>
     </li>
     <% }) %>
 </ul>
