--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,20 +1,29 @@
 <%- include header %>
-<% articles.forEach(function (article, index) { %>
-<p><h2><a href="/u/<%= article.name %>/<%= article.time.day %>/<%= article.title %>"><%= article.title %></a></h2></p>
-<p class="info">
-    作者：<a href="/u/<%= article.name %>"><%= article.name %></a> |
-    日期：<%= article.time.minute %>|
-    标签：
-    <% if (article.tags) { %>
-    <% article.tags.forEach(function (tag, index) { %>
-    <% if (tag) { %>
-    <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
-    <% } %>
+<ul class="list-group">
+
+    <% articles.forEach(function (article, index) { %>
+    <li>
+        <h2><a href="/u/<%= article.name %>/<%= article.time.day %>/<%= article.title %>"><%= article.title %></a>
+        </h2>
+
+        <div class="info">
+            作者：<a href="/u/<%= article.name %>"><%= article.name %></a> |
+            日期：<%= article.time.minute %>|
+            标签：
+            <% if (article.tags) { %>
+            <% article.tags.forEach(function (tag, index) { %>
+            <% if (tag) { %>
+            <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
+            <% } %>
+            <% }) %>
+            <% } %>
+        </div>
+
+        <p><%- article.content %></p>
+
+        <div class="info">阅读：<%= article.pv %> | 评论：<%= article.comments.length %></div>
+    </li>
     <% }) %>
-    <% } %>
-</p>
-<p><%- article.content %></p>
-<p class="info">阅读：<%= article.pv %> | 评论：<%= article.comments.length %></p>
-<% }) %>
+</ul>
 <%- include page %>
 <%- include footer %>
