--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,7 +2,8 @@
 </div>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+<script src="/js/jquery.js"></script>
+<script src="/js/jquery.md5.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="/js/bootstrap.min.js"></script>
 <script type="text/javascript">
