--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,60 @@
 <%- include header %>
-<form method="post">
-    用户名：<input type="text" name="name"/><br/>
-    密码： <input type="password" name="password"/><br/>
-    <input type="submit" value="登录"/>
-</form>
+<div class="row">
+    <div class="col-lg-4 col-lg-offset-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="panel-title" style="text-align: left">用户登录</div>
+            </div>
+            <div class="panel-body" style="padding: 20px">
+                <form action="/login" class="form-horizontal" role="form" method="post">
+                    <div class="form-group">
+                        <input id="username" type="text" class="form-control" name="name"
+                               placeholder="用户名">
+                    </div>
+                    <div class="form-group">
+                        <input id="password" type="password" class="form-control" name="password"
+                               autocomplete="off" placeholder="密码">
+                    </div>
+                    <div class="form-group">
+                        <input type="button" class="btn btn-success btn-block" value="登 录" onclick="login();">
+                        <a href="/reg" class="btn btn-primary" style="float: right;margin-top: 10px;">注 册</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<script type="text/javascript">
+    function login() {
+        var username = $('#username').val(), password = $('#password').val();
+        if (!username) {
+            typeAlert('用户名不能为空');
+            return;
+        }
+        if (!password) {
+            typeAlert('密码不能为空');
+            return;
+        }
+        var data = {"name": username, "password": $.md5(password)};
+        $.ajax({
+            url: '/login',
+            type: 'POST',
+            data: data,
+            success: function (data, status) {
+                if (data.sucess) {
+                    typeSucess(data.sucess);
+                    location.href = '/';
+                }
+                if (data.error) {
+                    typeAlert(data.error);
+                }
+            },
+            error: function (data, status) {
+                if (status == "error") {
+                    typeAlert('登录失败');
+                }
+            }
+        });
+    }
+</script>
 <%- include footer %>
