--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -1,17 +1,89 @@
-<form method="post">
+<form>
     <div class="form-group">
         标题：<br/>
-        <input class="check" type="text" name="title" value="<%= article.title %>"/>
+        <input id="title" type="text" value="<%= article.title %>"/>
     </div>
     <div class="form-group">
-        标签：<br/>
-        <input type="text" name="tag1" value="<%= article.tags[0] %>"/>
-        <input type="text" name="tag2" value="<%= article.tags[1] %>"/>
-        <input type="text" name="tag3" value="<%= article.tags[2] %>"/>
+        标签：
+        <% if(article.tags){ %>
+        <% article.tags.forEach(function (tag) { %>
+        <% if (tag) { %>
+        <a class="label label-primary tag" href="/tags/<%= tag %>"><%= tag %></a>
+        <% } %>
+        <% }) %>
+        <% } %>
+        <br id="aftertaglabel"/>
+        <button id="addtag" type="button" class="btn btn-primary" style="margin-right: 10px" onclick="addTag();">添加
+        </button>
     </div>
     <div class="form-group">
         正文：<br/>
-        <textarea class="check" name="content" rows="20" cols="100"><%= article.content %></textarea>
+        <textarea id="content" rows="20" cols="100"><%= article.content %></textarea>
     </div>
-    <button type="submit" class="btn btn-default">保存修改</button>
+    <button type="button" class="btn btn-primary" onclick="save();">保存</button>
 </form>
+<script type="text/javascript">
+    function save() {
+        var title = $('#title').val(), content = $('#content').val();
+        var tags = [];
+        $('a.tag').each(function () {
+            if ($(this).text()) {
+                tags.push($(this).text());
+            }
+        });
+        if (!title) {
+            typeAlert('标题不能为空');
+            return;
+        }
+        if (!content) {
+            typeAlert('内容不能为空');
+            return;
+        }
+        var data = {title: title, tags: tags, content: content};
+        $.ajax({
+            url: location.pathname,
+            type: 'POST',
+            dataType: 'json',
+            contentType: 'application/json',
+            data: JSON.stringify(data),
+            success: function (data) {
+                if (data.sucess) {
+                    typeSucess(data.sucess);
+                    location.href = '/u/' + data.name;
+                }
+                if (data.error) {
+                    typeAlert(data.error);
+                }
+            }
+        });
+    }
+    function addTag() {
+        if ($('#edittag').length > 0) {
+            // $('<input type="text"  class="tag"/>').insertBefore($('#addtag'));
+            if (!$('#edittag').val()) {
+                typeAlert('标签不能为空');
+            } else if ((function () {
+                        var exist = false;
+                        $('a.tag').each(function () {
+                                    if ($(this).text() == $('#edittag').val()) {
+                                        exist = true;
+                                    }
+                                }
+                        )
+                        return exist;
+                    })()) {
+                typeAlert('已有该标签');
+            } else {
+                var newTag = $('#edittag').val();
+                var tagE = document.createElement("a");
+                tagE.setAttribute('class', 'label label-primary tag');
+                tagE.setAttribute('href', '/tag/' + newTag);
+                tagE.innerText = newTag;
+                $(tagE).insertBefore('#aftertaglabel');
+                $('#edittag').remove();
+            }
+        } else {
+            $('<input id="edittag" type="text" class="tag"/>').insertAfter($('#addtag'));
+        }
+    }
+</script>
