--- a/views/header.ejs
+++ b/views/header.ejs
@@ -69,6 +69,9 @@
                 } else {
                     $("<div class='alert alert-danger' role='alert'>" + str + "</div>").insertBefore($('article'));
                 }
+                setTimeout(function () {
+                    $('.alert').remove();
+                }, 3000);
             }
             function typeSucess(str) {
                 if ($('.alert-danger').length > 0) {
