--- a/views/header.ejs
+++ b/views/header.ejs
@@ -33,7 +33,7 @@
                 </button>
 
                 <% if(user){ %>
-                <a class="navbar-brand" href="u/<%= user.name %>">
+                <a class="navbar-brand" href="/u/<%= user.name %>">
                     <%= user.name %>的博客
                 </a>
                 <% } else { %>
