--- a/views/article.ejs
+++ b/views/article.ejs
@@ -9,7 +9,7 @@
     <% if (article.tags){ %>
     <% article.tags.forEach(function (tag, index) { %>
     <% if (tag) { %>
-    <a class="label label-primary" href="/tags/<%= tag %>"><%= tag %></a>
+    <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
     <% } %>
     <% }) %>
     <% } %>
