--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,5 +13,41 @@ div.content {
 }
 
 a.tag {
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
     margin-left: 10px;
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+}
+
+a.tag:hover,
+a.tag:focus,
+a.tag.focus {
+    background-color: red;
+    text-decoration: none;
+}
+
+a.title:hover,
+a.title:focus,
+a.title.focus {
+    color: greenyellow;
+    text-decoration: none;
 }
